--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -9,5 +9,8 @@ body {
   margin-top: 10px;
   padding: 15px;
   border: 2px solid black;
-
 }
+
+  $(function() {
+  $("#accordion").accordion();
+  });
